--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,27 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="/styles.css">
   <script type="text/javascript" src="/jquery.js"></script>
 </head>
 <body>
-  <label for=""></label>
-  <input type="text" name="user" value="your text">
-  <button type="submit">send</button>
+  <div class="container">
+      <div class="create">
+              <h2>your breif</h2>
+              <div class="summary">
+
+              </div>
+      </div>
+      <div class="small-container">
+        <div class="box">
+          <label for=""></label>
+       <input type="text" name="user" value="your text">
+       <button type="submit">send</button>
+        </div>
+
+      </div>
+  </div>
+
   <script src="/main.js"></script>
 </body>
 </html>
