--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,14 @@
 <body>
   <div class="container">
       <div class="create">
-              <h2>your breif</h2>
-              <div class="summary">
+              <div class="briefSave">
+                 <h2 id="brief">your brief</h2>
+                 <button type="submit">SAVE</button>
+              </div>
 
+              <h2 id="briefTitle"></h2>
+              <div class="summary">
+                <h3 id="title"></h3>
               </div>
       </div>
       <div class="small-container">
